--- a/cluster/230-media-service/pvcs/kustomization.yaml
+++ b/cluster/230-media-service/pvcs/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - anime-files.yaml
-  - download-pvc.yaml
+  - download-files.yaml
   - movie-files.yaml
   - music-files.yaml
   - tv-files.yaml
