调整媒体服务的所有PVC，将之前的cephfs+无副本池改成juicefs+纠删码池

--- a/cluster/230-media-service/emby/transcode-pvc.yaml
+++ b/cluster/230-media-service/emby/transcode-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 2Ti
-  storageClassName: ceph-fs-media-unsafe
+  storageClassName: juicefs-media-ec
