--- a/cluster/230-media-service/pvcs/anime-files.yaml
+++ b/cluster/230-media-service/pvcs/anime-files.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 10Ti
-  storageClassName: ceph-fs-media-unsafe
+  storageClassName: juicefs-media-ec
