--- a/cluster/230-media-service/plex/transcode-pvc.yaml
+++ b/cluster/230-media-service/plex/transcode-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 2Ti
-  storageClassName: ceph-fs-media-unsafe
+  storageClassName: juicefs-media-ec
