调整所有媒体服务挂载的pvc，改为合并后的pvc

--- a/cluster/230-media-service/bazarr/helm-release.yaml
+++ b/cluster/230-media-service/bazarr/helm-release.yaml
@@ -39,18 +39,10 @@ spec:
       config:
         enabled: true
         existingClaim: bazarr-config
-      movie:
+      media:
         enabled: true
-        mountPath: /movie
-        existingClaim: movie-files
-      tv:
-        enabled: true
-        mountPath: /tv
-        existingClaim: tv-files
-      anime:
-        enabled: true
-        mountPath: /anime
-        existingClaim: anime-files
+        mountPath: /media
+        existingClaim: media-files
 
     ingress:
       main:
