--- a/cluster/230-media-service/qbittorrent/helm-release.yaml
+++ b/cluster/230-media-service/qbittorrent/helm-release.yaml
@@ -39,10 +39,10 @@ spec:
       config:
         enabled: true
         existingClaim: qbittorrent-config
-      downloads:
+      media:
         enabled: true
-        mountPath: /downloads
-        existingClaim: download-files
+        mountPath: /media
+        existingClaim: media-files
 
     ingress:
       main:
