添加一个合并存储服务中所有可压缩文件的juicefs pvc 调整pvc文件目录结构

--- a/cluster/200-storage-service/pvcs/compressed-files.yaml
+++ b/cluster/200-storage-service/pvcs/compressed-files.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: other-files
+  name: compressed-files
   namespace: file-service
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Ti
-  storageClassName: ceph-fs-compressed-files
+      storage: 40Ti
+  storageClassName: juicefs-compressed-files
