--- a/cluster/200-storage-service/pvcs/kustomization.yaml
+++ b/cluster/200-storage-service/pvcs/kustomization.yaml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - compressed-files.yaml
+  - media-files.yaml
   - camera-files.yaml
   - dump-files.yaml
   - music-files.yaml
