--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -42,12 +42,18 @@ spec:
       osd_scrub_chunk_max = 25
       osd_max_scrubs = 3
       osd_scrub_during_recovery = false
-      osd_max_backfills = 1
+      osd_max_backfills = 64
+      osd_recovery_op_priority = 3
       osd_backfill_scan_min = 64
       osd_backfill_scan_max = 512
       osd_backfill_retry_interval = 0
       osd_recovery_sleep = 0
-      osd_recovery_max_active = 0
+      osd_recovery_max_active = 16
+      osd_recovery_max_active_hdd = 16
+      osd_recovery_max_active_ssd = 16
+      osd_recovery_sleep_hdd = 0
+      osd_recovery_sleep_ssd = 0
+      osd_recovery_sleep_hybrid = 0
       osd_recovery_max_single_start = 1
       osd_recovery_max_chunk = 8Mi
 
