--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -43,7 +43,8 @@ spec:
       osd_max_scrubs = 3
       osd_scrub_during_recovery = false
       osd_max_backfills = 64
-      osd_recovery_op_priority = 3
+      osd_client_op_priority = 30
+      osd_recovery_op_priority = 80
       osd_backfill_scan_min = 64
       osd_backfill_scan_max = 512
       osd_backfill_retry_interval = 0
