替换samba镜像源，解决get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND报错问题

--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -24,8 +24,8 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/crazy-max/samba
-      tag: 4.18.2
+      repository: "registry-gitlab.${SECRET_DOMAIN}/loco/docker-samba"
+      tag: 4.18.3
 
     service:
       main:
