--- a/cluster/230-media-service/qbittorrent/helm-release.yaml
+++ b/cluster/230-media-service/qbittorrent/helm-release.yaml
@@ -44,6 +44,21 @@ spec:
         mountPath: /media
         existingClaim: media-files
 
+    service:
+      main:
+        ports:
+          http:
+            port: 8080
+      bittorrent:
+        enabled: true
+        type: LoadBalancer
+        ports:
+          bittorrent:
+            enabled: true
+            port: 6881
+            protocol: TCP
+            targetPort: 6881
+
     ingress:
       main:
         enabled: true
