给媒体服务中用到了juicefs pvc的挂载都加上mountPropagation: HostToContainer设置，使juicefs即使因连接问题之类的情况导致需要重新挂载，也能正常恢复

--- a/cluster/230-media-service/bazarr/helm-release.yaml
+++ b/cluster/230-media-service/bazarr/helm-release.yaml
@@ -43,6 +43,7 @@ spec:
         enabled: true
         mountPath: /media
         existingClaim: media-files
+        mountPropagation: HostToContainer
 
     ingress:
       main:
