--- a/cluster/230-media-service/emby/helm-release.yaml
+++ b/cluster/230-media-service/emby/helm-release.yaml
@@ -39,10 +39,12 @@ spec:
         enabled: true
         mountPath: /tmp/transcoding-temp
         existingClaim: emby-transcode
+        mountPropagation: HostToContainer
       media:
         enabled: true
         mountPath: /media
         existingClaim: media-files
+        mountPropagation: HostToContainer
 
     hostNetwork: true
 
