--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -38,6 +38,7 @@ spec:
         type: pvc
         existingClaim: media-files
         mountPath: /media
+        mountPropagation: HostToContainer
 
     configmap:
       config:
