--- a/cluster/230-media-service/radarr/helm-release.yaml
+++ b/cluster/230-media-service/radarr/helm-release.yaml
@@ -43,6 +43,7 @@ spec:
         enabled: true
         mountPath: /media
         existingClaim: media-files
+        mountPropagation: HostToContainer
 
     ingress:
       main:
