给存储服务中用到了juicefs pvc的挂载都加上mountPropagation: HostToContainer设置，使juicefs即使因连接问题之类的情况导致需要重新挂载，也能正常恢复

--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -38,11 +38,13 @@ spec:
         type: pvc
         existingClaim: compressed-files
         mountPath: /mnt/compressed-files
+        mountPropagation: HostToContainer
       media-files:
         enabled: true
         type: pvc
         existingClaim: media-files
         mountPath: /mnt/media-files
+        mountPropagation: HostToContainer
 
     configmap:
       config:
