--- a/cluster/200-storage-service/resilio-sync/helm-release.yaml
+++ b/cluster/200-storage-service/resilio-sync/helm-release.yaml
@@ -63,8 +63,10 @@ spec:
         type: pvc
         existingClaim: compressed-files
         mountPath: /sync/other-files
+        mountPropagation: HostToContainer
       media-files:
         enabled: true
         type: pvc
         existingClaim: media-files
         mountPath: /sync/media-files
+        mountPropagation: HostToContainer
