在存储服务的samba中添加一个给Mac的Time Machine用的独立目录

--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -124,4 +124,13 @@ spec:
                 guestok: no
                 validusers: loco
                 writelist: loco
-                veto: no            
+                veto: no
+            
+              - name: macbook-timemachine
+                path: /mnt/compressed-files/macbook-timemachine
+                browsable: yes
+                readonly: no
+                guestok: no
+                validusers: loco
+                writelist: loco
+                veto: no
