将JuiceFS纳入Flux管理

--- a/cluster/000-base/cluster-secrets.sops.yaml
+++ b/cluster/000-base/cluster-secrets.sops.yaml
@@ -32,14 +32,15 @@ stringData:
   SECRET_K8S_API_SERVER_PORT: ENC[AES256_GCM,data:F96gMw==,iv:ohv+x14EZf4NUzWUn6S7G4wJphb9HVygcjf9sPdJUQw=,tag:8mgIO6ya3gUzGPgKwwS70Q==,type:str]
   SECRET_SAMBA_USERNAME: ENC[AES256_GCM,data:yOMheA==,iv:yS9YUnM/GQB93hsulH8bQgj1UoIEfDKuaQ3IA8+Y37M=,tag:EpUqLv1hbwGUFl0mACja/A==,type:str]
   SECRET_SAMBA_PASSWORD: ENC[AES256_GCM,data:dp30GZEHZhWpmIPtAPFChuZfFMHBHX0GwjVnbwCxrV8=,iv:Z+XbtVqKFe4ZCy1er8C6LUovu5rOI6hi9b+05ZE+lOE=,tag:S5dNOh+vWX7vo6U0SVNnag==,type:str]
+  SECRET_JUICEFS_REDIS_PASSWORD: ENC[AES256_GCM,data:LmFR09a5Y5v5dibNespzQtNo+T6ZwyJxdUsfTBoEjjE=,iv:R61Qz7mgDjmTXhVaXSWAUwpInTsy3XTBBtauOC4oLBk=,tag:53+FbnaXo6w/7nN+yhCEJQ==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2023-07-09T04:18:16Z"
-  mac: ENC[AES256_GCM,data:j0z/LCrky2PsqsphJjOS8SFT6DKzAjoEOG1n7WX8I1D1TNdWR4PO5DtNOY+z+horinm1Bx5SO+2P6OXqeBwJwUUDw9JHj8/K6HHEiq1Y1qC7TKnz/Hq6QSSOe1WYIzt4/ZazU6Z1YYFOpA5O7ClyWOPacR0rRYIpumFLCNtlzRU=,iv:9bGEeZCk7+tBjmTWauuS7l7vxQTXcrqPXYNTRofmcH4=,tag:1fiMhrSACFDpRQARy5dHLA==,type:str]
+  lastmodified: "2023-07-09T04:18:58Z"
+  mac: ENC[AES256_GCM,data:HByrx38TfRHwtyr2WuFCE6THZ+k1AV+m95xWB854aa3tfmyeT4cIK1xD0gHP3AJmy1JuGsjvdkvK5sRl4lPlyGafJTdEU5uhjwfHF+qbHrZfwvgVTrWjh2C8DR60+6/mboVDWgPbKYH4Fgi/z8saDAkAlihv5uskwyzg7+QQnBs=,iv:3fDNZOG7KJJkYr/ZSBd9BawDSPnlaVhjaO0lGi+I28A=,tag:1X6Cj0xA4TFf3LkgolRgXw==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
