--- a/cluster/001-infrastructure/juicefs/redis/kustomization.yaml
+++ b/cluster/001-infrastructure/juicefs/redis/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
-  - juicefs
-  - metallb
-  - traefik
+  - master-data-pvc.yaml
+  - replica-data-pvc.yaml
+  - helm-release.yaml
