在媒体服务中重新加回Jackett，移除BUG较多的Prowlarr

--- a/cluster/230-media-service/kustomization.yaml
+++ b/cluster/230-media-service/kustomization.yaml
@@ -5,12 +5,13 @@ resources:
   - bazarr
   - emby
   - flaresolverr
+  - jackett
 #  - jellyfin
   - jproxy
   - overseerr
   - lidarr
 #  - plex
-  - prowlarr
+  #  - prowlarr
   - qbittorrent
   - radarr
   - samba
