设置ceph的mon数据所在盘剩余空间不足的报警阈值，使其只有在只剩10%空间时才报警（默认为30%）

--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -33,6 +33,7 @@ spec:
       bdev_async_discard = true
       [mon]
       mon_warn_on_pool_no_redundancy = false
+      mon_data_avail_warn = 10
       [osd]
       bluefs_buffered_io = false
       osd_scrub_begin_hour = 22
