--- a/cluster/230-media-service/emby/transcode-pvc.yaml
+++ b/cluster/230-media-service/emby/transcode-pvc.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: entertainment
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 2Ti
-  storageClassName: juicefs-media-ec
+      storage: 200Gi
+  storageClassName: ceph-block-application-performance
