修复因格式与Flux的变量类似导致解析失败的JuiceFS Helm yaml
https://fluxcd.io/flux/components/kustomize/kustomization/#post-build-variable-substitution

--- a/cluster/002-infrastructure-extra/juicefs/helm-release.yaml
+++ b/cluster/002-infrastructure-extra/juicefs/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
           secretKey: "client.admin"
           envs: "{TZ: Asia/Shanghai}"
           configs: '{"ceph-conf": "/etc/ceph"}'
-        pathPattern: "${.PVC.namespace}-${.PVC.name}"
+        pathPattern: "$${.PVC.namespace}-$${.PVC.name}"
         mountOptions:
           - "enable-xattr"
 
@@ -70,7 +70,7 @@ spec:
           secretKey: "client.admin"
           envs: "{TZ: Asia/Shanghai}"
           configs: '{"ceph-conf": "/etc/ceph"}'
-        pathPattern: "${.PVC.namespace}-${.PVC.name}"
+        pathPattern: "$${.PVC.namespace}-$${.PVC.name}"
         mountOptions:
           - "enable-xattr"
 
@@ -86,7 +86,7 @@ spec:
           secretKey: "client.admin"
           envs: "{TZ: Asia/Shanghai}"
           configs: '{"ceph-conf": "/etc/ceph"}'
-        pathPattern: "${.PVC.namespace}-${.PVC.name}"
+        pathPattern: "$${.PVC.namespace}-$${.PVC.name}"
         mountOptions:
           - "enable-xattr"
 
@@ -102,6 +102,6 @@ spec:
           secretKey: "client.admin"
           envs: "{TZ: Asia/Shanghai}"
           configs: '{"ceph-conf": "/etc/ceph"}'
-        pathPattern: "${.PVC.namespace}-${.PVC.name}"
+        pathPattern: "$${.PVC.namespace}-$${.PVC.name}"
         mountOptions:
           - "enable-xattr"
