--- a/cluster/230-media-service/qbittorrent/helm-release.yaml
+++ b/cluster/230-media-service/qbittorrent/helm-release.yaml
@@ -53,11 +53,19 @@ spec:
       bittorrent:
         enabled: true
         type: LoadBalancer
+        externalTrafficPolicy: Local
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: 192.168.254.101
         ports:
-          bittorrent:
+          bt-tcp:
             enabled: true
             port: 6881
             protocol: TCP
+            targetPort: 6881
+          bt-udp:
+            enabled: true
+            port: 6881
+            protocol: UDP
             targetPort: 6881
 
     ingress:
