为依赖的主要存储设备为HDD且有较高读写需求的容器标记上disk-type为hdd的nodeSelector，使其只在具有disk-type为hdd的节点上运行，确保尽量不通过网络传输

--- a/cluster/200-storage-service/photoprism/helm-release.yaml
+++ b/cluster/200-storage-service/photoprism/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
   values:
     nodeSelector:
       location: "home"
+      disk-type: "hdd"
 
     image:
       repository: photoprism/photoprism
