--- a/cluster/230-media-service/qbittorrent/helm-release.yaml
+++ b/cluster/230-media-service/qbittorrent/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
   values:
     nodeSelector:
       location: "home"
+      disk-type: "hdd"
 
     image:
       repository: ghcr.io/onedr0p/qbittorrent
