--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
   values:
     nodeSelector:
       location: "home"
+      disk-type: "hdd"
 
     image:
       repository: "registry-gitlab.${SECRET_DOMAIN}/loco/docker-samba"
