--- a/cluster/001-infrastructure/traefik/helm-release.yaml
+++ b/cluster/001-infrastructure/traefik/helm-release.yaml
@@ -40,6 +40,13 @@ spec:
         level: ERROR
       access:
         enabled: true
+    service:
+      enabled: true
+      type: LoadBalancer
+      annotations:
+        metallb.universe.tf/loadBalancerIPs: 192.168.254.1
+      spec:
+        externalTrafficPolicy: Local
     ports:
       traefik:
         expose: true
