设置cdi-uploadproxy的loadbalancer service，指定IP地址并设置externalTrafficPolicy=Local

--- a/cluster/100-virtual-machine-base/kubevirt-cdi/cdi-uploadproxy-loadbalancer.yaml
+++ b/cluster/100-virtual-machine-base/kubevirt-cdi/cdi-uploadproxy-loadbalancer.yaml
@@ -4,6 +4,8 @@ kind: Service
 metadata:
   name: cdi-uploadproxy-loadbalancer
   namespace: cdi
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 192.168.254.2
 spec:
   ports:
     - protocol: TCP
@@ -12,3 +14,4 @@ spec:
   selector:
     cdi.kubevirt.io: cdi-uploadproxy
   type: LoadBalancer
+  externalTrafficPolicy: Local
