--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -32,6 +32,8 @@ spec:
       main:
         type: LoadBalancer
         externalTrafficPolicy: Local
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: 192.168.254.3
 
     persistence:
       media-files:
