更新photoprism到230625版本

--- a/cluster/200-storage-service/photoprism/helm-release.yaml
+++ b/cluster/200-storage-service/photoprism/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
 
     image:
       repository: photoprism/photoprism
-      tag: "20220121"
+      tag: "230625"
 
     env:
       TZ: Asia/Shanghai
