设置photoprism移除媒体文件的大小和分辨率上限，避免高清内容无法正常建立索引

--- a/cluster/200-storage-service/photoprism/helm-release.yaml
+++ b/cluster/200-storage-service/photoprism/helm-release.yaml
@@ -34,6 +34,8 @@ spec:
       UID: "1000"
       GID: "1000"
       UMASK: 002
+      PHOTOPRISM_ORIGINALS_LIMIT: "-1"
+      PHOTOPRISM_RESOLUTION_LIMIT: "-1"
 
     ingress:
       main:
