--- a/cluster/010-management-tools/uptime-kuma/helm-release.yaml
+++ b/cluster/010-management-tools/uptime-kuma/helm-release.yaml
@@ -24,11 +24,11 @@ spec:
       repository: louislam/uptime-kuma
       tag: 1.22.1-alpine
 
-    podSecurityContext:
-      runAsUser: 1000
-      runAsGroup: 1000
-      fsGroup: 1000
-      fsGroupChangePolicy: OnRootMismatch
+    #    podSecurityContext:
+    #      runAsUser: 1000
+    #      runAsGroup: 1000
+    #      fsGroup: 1000
+    #      fsGroupChangePolicy: OnRootMismatch
 
     env:
       TZ: "Asia/Shanghai"
