添加两块西部数据HC560 20TB机械硬盘到Ceph集群中

--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -139,6 +139,12 @@ spec:
               - name: "/dev/disk/by-id/scsi-SATA_ST8000NM000A-2KE_WRD0NC8L" # 1
                 config:
                   deviceClass: "hdd"
+              - name: "/dev/disk/by-id/scsi-SWDC_WUH722020BL5204_8LHPJ7WN"
+                config:
+                  deviceClass: "hdd"
+              - name: "/dev/disk/by-id/scsi-SWDC_WUH722020BL5204_8LHPZ97R"
+                config:
+                  deviceClass: "hdd"
           - name: "home-server-sonic"
             devices:
               - name: "/dev/disk/by-id/nvme-INTEL_SSDPE2KX040T8_BTLJ848209YE4P0DGN"  # Intel P4510 4T U.2
